# Copyright 2022-2023 Bruce Merry
#
# This program is free software: you can redistribute it and/or modify it
# under the terms of the GNU General Public License as published by the Free
# Software Foundation, either version 3 of the License, or (at your option)
# any later version.
#
# This program is distributed in the hope that it will be useful, but WITHOUT
# ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
# FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for
# more details.
#
# You should have received a copy of the GNU General Public License along
# with this program. If not, see <https://www.gnu.org/licenses/>.


[package]
name = "espd"
version = "0.1.0"
edition = "2021"
authors = ["Bruce Merry"]
license = "GPL-3.0-or-later"
description = "Adjust inverter settings based on load-shedding informatio from EskomSePush API"
repository = "https://github.com/bmerry/espd"

[dependencies]
chrono = { version = "0.4.24", default-features = false, features = ["clock", "time"] }
reqwest = { version = "0.11.16", default-features = false, features = ["rustls", "webpki-roots"] }
serde = { version = "1.0.159", features = ["derive"] }
tokio = { version = "1.27.0", features = ["rt", "macros"] }
tokio-modbus = { version = "0.7.1", default-features = false, features = ["rtu", "tcp"] }
tokio-serial = "5.4.4"
toml = { version = "0.7.3", default-features = false, features = ["parse"] }
