# Copyright 2023-2024 Bruce Merry
#
# This program is free software: you can redistribute it and/or modify it
# under the terms of the GNU General Public License as published by the Free
# Software Foundation, either version 3 of the License, or (at your option)
# any later version.
#
# This program is distributed in the hope that it will be useful, but WITHOUT
# ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
# FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for
# more details.
#
# You should have received a copy of the GNU General Public License along
# with this program. If not, see <https://www.gnu.org/licenses/>.


[package]
name = "socit"
version = "0.2.1"
edition = "2021"
authors = ["Bruce Merry"]
license = "GPL-3.0-or-later"
description = "Dynamically control inverter SoC settings"
repository = "https://github.com/bmerry/socit"

[profile.release]
strip = true
lto = true

[dependencies]
async-trait = "0.1.68"
chrono = { version = "0.4.38", default-features = false, features = ["clock", "serde"] }
clap = { version = "4.2.5", features = ["derive"] }
env_logger = "0.11.5"
futures = { version = "0.3.28", default-features = false }
humantime-serde = "1.1.1"
influxdb2 = { version = "0.5.2", default-features = false, features = ["rustls"] }
log = "0.4.17"
modbus-robust = { version = "0.2.0" }
radians = "0.3.1"
reqwest = { version = "0.12.9", default-features = false, features = ["json", "rustls-tls-webpki-roots"] }
serde = { version = "1.0.159", features = ["derive"] }
tokio = { version = "1.27.0", features = ["rt", "macros", "signal"] }
tokio-modbus = { version = "0.16.0", default-features = false, features = ["rtu", "tcp"] }
tokio-serial = "5.4.4"
tokio-stream = "0.1.17"
tokio-util = { version = "0.7.8", default-features = false }
toml = { version = "0.8.19", default-features = false, features = ["parse"] }
